--- a/css/viewer.css
+++ b/css/viewer.css
@@ -22,6 +22,9 @@ body {
 	width: 100%;
 	position: absolute;
 }
+#canvas svg {
+	overflow: visible;
+}
 #canvas svg, #t {
 	font-family: 'PT Sans', sans-serif;
 }
